[SvgIcon] fix FF alignment issue (List actions)

--- a/src/SvgIcon/SvgIcon.css
+++ b/src/SvgIcon/SvgIcon.css
@@ -1,5 +1,4 @@
 .root {
-  display: flex;
   padding: 0;
   height: 48px;
   width: 48px;
